--- a/src/global.css
+++ b/src/global.css
@@ -1,16 +1,12 @@
 
-.columns.is-gapless:not(:last-child) {
-  margin-bottom: 0.75rem !important;
-}
-
 .hero-body.is-narrow {
   padding: 1.5rem;
 }
 
-.level:not(:last-child) {
-  margin-bottom: 0.75rem !important;
-}
-
 .section {
   padding-top: 1.5rem;
+}
+
+.tabs {
+  margin-bottom: 0rem;
 }
