--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,14 @@
   padding: 1.5rem;
 }
 
+input[type="radio"] {
+  margin-right: 4px;
+}
+
+label[class="radio"] + label[class="radio"] {
+  margin-left: 15px;
+}
+
 .is-box-header {
   margin-bottom: 0px;
 }
