--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,6 @@
 
+/* General shit */
+
 .column + .column {
   border-left: 1px solid lightgray;
 }
@@ -17,6 +19,10 @@ label[class="radio"] + label[class="radio"] {
 
 .is-box-header {
   margin-bottom: 0px;
+}
+
+.is-height-full {
+  height: 100%;
 }
 
 .is-width-full {
@@ -45,6 +51,10 @@ label[class="radio"] + label[class="radio"] {
 .dogstatus {
   border-radius: 6px;
   padding: 0px 4px 0px 4px;
+}
+
+.dogstatus.no-radius {
+  border-radius: 0px;
 }
 
 .dogstatus.is-affected {
@@ -127,4 +137,25 @@ span.dogstatus + span.dogstatus {
   background-color: #007bff;
   border-color: #007bff;
   color: #fff;
+}
+
+/* ReactTable overrides */
+
+.rt-td {
+  padding: 1px 0px 0px 0px !important;
+  white-space: inherit !important;
+}
+
+.rt-th {
+  padding: 0px !important;
+}
+
+/* View */
+
+.view-header {
+  background-color: #101010;
+  color: #EEEEEE;
+  font-weight: bold;
+  margin-bottom: 1px;
+  padding: 3px 0px 3px 0px;
 }
