--- a/src/global.css
+++ b/src/global.css
@@ -14,7 +14,7 @@
   color: #EEEEEE;
   font-weight: bold;
   margin-bottom: 1px;
-  padding: 3px 0px 3px 0px;
+  padding: 3px 0px 3px 3px;
 }
 
 .footer {
@@ -153,6 +153,7 @@ span.dogstatus + span.dogstatus {
 
 .auditlog-entries {
   font-size: 0.9rem !important;
+  text-align: center;
 }
 
 .auditlog-entries .rt-td:nth-of-type(1) {
@@ -161,13 +162,14 @@ span.dogstatus + span.dogstatus {
 }
 
 .auditlog-entries .rt-td:nth-of-type(2) {
-  flex: 80 0 auto !important;
-  width: 80px !important;
+  flex: 60 0 auto !important;
+  width: 60px !important;
 }
 
 .auditlog-entries .rt-td:nth-of-type(3) {
-  flex: 180 0 auto !important;
-  width: 180px !important;
+  flex: 200 0 auto !important;
+  text-align: left;
+  width: 200px !important;
 }
 
 .auditlog-entries .rt-th:nth-of-type(1) {
@@ -176,13 +178,14 @@ span.dogstatus + span.dogstatus {
 }
 
 .auditlog-entries .rt-th:nth-of-type(2) {
-  flex: 80 0 auto !important;
-  width: 80px !important;
+  flex: 60 0 auto !important;
+  width: 60px !important;
 }
 
 .auditlog-entries .rt-th:nth-of-type(3) {
-  flex: 180 0 auto !important;
-  width: 180px !important;
+  flex: 200 0 auto !important;
+  text-align: left;
+  width: 200px !important;
 }
 
 .newlitter-remove-child {
